--- a/_config.yml
+++ b/_config.yml
@@ -13,10 +13,10 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
+title: 子沉Blog
 baseurl: "" # For github pages
 description: >- # You can edit footer in _includes/footer.md 
-  This is an Efficiency demo.Based on ultralight.
+  子沉Blog
 
 google_analytics: # Enter your tracking ID. Not available on IPFS
 
