--- a/_config.yml
+++ b/_config.yml
@@ -26,6 +26,9 @@ twitter_username:
 # 日期格式化
 date_format: "%Y/%m/%d-%a"
 
+# 图标URL
+icon: "https://zichenstudio.github.io/blog/favicon.ico"
+
 # 背景图片URL
 background-url: "https://s2.loli.net/2023/11/18/Loy27Fhfgu5iBAV.jpg"
 background-source: "Background photo by <a href='https://unsplash.com/@auceinss?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText'>Yuming Zhang</a> on <a href='https://unsplash.com/photos/ck-p536ihvg?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText'>Unsplash</a>"
