--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ date_format: "%Y/%m/%d-%a"
 icon: "https://zichenstudio.github.io/blog/favicon.ico"
 
 # 背景图片URL
-background-url: "https://s2.loli.net/2023/11/18/Loy27Fhfgu5iBAV.jpg"
-background-source: "Background photo by <a href='https://unsplash.com/@auceinss?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText'>Yuming Zhang</a> on <a href='https://unsplash.com/photos/ck-p536ihvg?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText'>Unsplash</a>"
+background-url: "https://s2.loli.net/2024/02/27/M1JgfDqGaPdzThF.jpg"
+background-source: "Background photo by <a href='https://space.bilibili.com/1740643474'>imoutopia</a> on <a href='https://www.bilibili.com/'>BiliBili</a>"
 
 # CC-BY license
 ccby: ' This work is licensed under CC BY 4.0. To view a copy of this license, visit <a href="http://creativecommons.org/licenses/by/4.0/" target="_blank">http://creativecommons.org/licenses/by/4.0/</a>'
